objects/Solutions_Log__c.object
<CustomObject>
    <description>Logs for all event Info, Error</description>
    <!--<enableLicensing>false</enableLicensing>-->
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Classes__c</fullName>
        <description>Classes where the event(error) occurs</description>
        <label>Classes</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>comment regarding problem solving</description>
        <label>Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Line__c</fullName>
        <description>Method&apos;s line where the event (error) occurs</description>
        <label>Line_Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Message of the event(error)</description>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <description>Method where the event(error) occurs</description>
        <label>Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Problem priority</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Problem solving state</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Watching</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Event Log Type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>BATCH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Solutions_Log</label>
    <nameField>
        <label>Solutions_Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solutions_Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>